re-factored code

--- a/tic-toe-game/index.html
+++ b/tic-toe-game/index.html
@@ -11,7 +11,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Permanent+Marker&display=swap"
             rel="stylesheet">
-        <script defer src="app.js"></script>
+        <script defer src="refactored-app.js"></script>
     </head>
 
     <body>
